attached_assets/Pasted--Configuring-done-0-0s-Generating-done-0-0s-Build-files-have-been-written-to-home-ru-1743585406819.txt
-- Configuring done (0.0s)
-- Generating done (0.0s)
-- Build files have been written to: /home/runner/workspace/ai_language/build
[  6%] Building CXX object CMakeFiles/ai_language_lib.dir/src/interpreters/BaseInterpret[ 13%] Building CXX object CMakeFiles/ai_language_lib.dir/src/interpreters/MLInterpreter.cpp.o
/home/runner/workspace/ai_language/src/interpreters/MLInterpreter.cpp: In constructor ‘ai_language::MLInterpreter::MLInterpreter()’:
/home/runner/workspace/ai_language/src/interpreters/MLInterpreter.cpp:13:5: error: ‘hasEvaluated’ was not declared in this scope
   13 |     hasEvaluated = false; // Added to track evaluation status
      |     ^~~~~~~~~~~~
/home/runner/workspace/ai_language/src/interpreters/MLInterpreter.cpp: In member function ‘virtual void ai_language::MLInterpreter::handleEvaluateCommand(const std::vector<std::__cxx11::basic_string<char> >&)’:
/home/runner/workspace/ai_language/src/interpreters/MLInterpreter.cpp:146:9: error: ‘hasEvaluated’ was not declared in this scope
  146 |         hasEvaluated = true;
      |         ^~~~~~~~~~~~
/home/runner/workspace/ai_language/src/interpreters/MLInterpreter.cpp: In member function ‘virtual void ai_language::MLInterpreter::handleShowCommand(const std::vector<std::__cxx11::basic_string<char> >&)’:
/home/runner/workspace/ai_language/src/interpreters/MLInterpreter.cpp:161:43: error: ‘learningRate’ was not declared in this scope
  161 |         std::cout << "Learning rate: " << learningRate << std::endl;
      |                                           ^~~~~~~~~~~~
/home/runner/workspace/ai_language/src/interpreters/MLInterpreter.cpp:162:36: error: ‘epochs’ was not declared in this scope
  162 |         std::cout << "Epochs: " << epochs << std::endl;
      |                                    ^~~~~~
/home/runner/workspace/ai_language/src/interpreters/MLInterpreter.cpp:163:40: error: ‘batchSize’ was not declared in this scope
  163 |         std::cout << "Batch size: " << batchSize << std::endl;
      |                                        ^~~~~~~~~
make[2]: *** [CMakeFiles/ai_language_lib.dir/build.make:90: CMakeFiles/ai_language_lib.dir/src/interpreters/MLInterpreter.cpp.o] Error 1
make[1]: *** [CMakeFiles/Makefile2:88: CMakeFiles/ai_language_lib.dir/all] Error 2
make: *** [Makefile:91: all] Error 2